Completado refactor facade de perfil usuario, con estadísticas incluidas